generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider  = "mysql"
  url       = env("DATABASE_URL")
  directUrl = env("DATABASE_URL")
}

model User {
  id                  Int               @id @default(autoincrement())
  username            String
  global_name         String?
  joined_at           DateTime?
  update_at           DateTime?         @updatedAt
  last_active         DateTime?
  create_at           DateTime?         @default(now())
  bot                 Boolean
  email               String?
  status              Int
  platform_created_at DateTime?
  platform_id         String            @unique
  audio_event         AudioEvent[]
  message             Message[]
  message_reaction    MessageReaction[]
  channels            UserChannel[]
  user_event          UserEvent[]
  roles               UserRole[]

  @@map("user")
}

model Role {
  id                  Int      @id @default(autoincrement())
  name                String
  created_at          DateTime @default(now())
  platform_created_at DateTime
  platform_id         String   @unique
  users               UserRole[]

  @@map("role")
}

model AudioEvent {
  id          Int         @id @default(autoincrement())
  channel_id  String
  creator_id  String
  name        String
  description String?
  status_id   String
  start_at    DateTime
  end_at      DateTime?
  user_count  Int
  image       String?
  created_at  DateTime    @default(now())
  platform_id String      @unique
  channel     Channel     @relation(fields: [channel_id], references: [platform_id])
  creator     User        @relation(fields: [creator_id], references: [platform_id])
  status      EventStatus @relation(fields: [status_id], references: [platform_id])
  user_event  UserEvent[]

  @@index([channel_id], map: "audio_event_channel_id_fkey")
  @@index([creator_id], map: "audio_event_creator_id_fkey")
  @@index([status_id], map: "audio_event_status_id_fkey")
  @@map("audio_event")
}

model EventStatus {
  id          Int          @id @default(autoincrement())
  name        String
  created_at  DateTime     @default(now())
  platform_id String       @unique
  event       AudioEvent[]

  @@map("event_status")
}

enum EventType {
  JOINED
  LEFT
}

model UserEvent {
  id         Int        @id @default(autoincrement())
  event_id   String
  user_id    String
  event_type EventType
  created_at DateTime   @default(now())
  event      AudioEvent @relation(fields: [event_id], references: [platform_id])
  user       User       @relation(fields: [user_id], references: [platform_id])

  @@index([event_id], map: "user_event_event_id_fkey")
  @@map("user_event")
}

model Message {
  id                  Int               @id @default(autoincrement())
  channel_id          String
  user_id             String
  created_at          DateTime          @default(now())
  is_deleted          Boolean           @default(false)
  platform_created_at DateTime
  platform_id         String            @unique
  channel             Channel           @relation(fields: [channel_id], references: [platform_id])
  user                User              @relation(fields: [user_id], references: [platform_id])
  message_reaction    MessageReaction[]

  @@index([channel_id], map: "message_channel_id_fkey")
  @@index([user_id], map: "message_user_id_fkey")
  @@map("message")
}

model Channel {
  id               Int               @id @default(autoincrement())
  name             String
  url              String
  created_at       DateTime          @default(now())
  platform_id      String            @unique
  audio_event      AudioEvent[]
  message          Message[]
  message_reaction MessageReaction[]
  users            UserChannel[]

  @@map("channel")
}

model MessageReaction {
  user_id        String
  message_id     String
  channel_id     String
  id             Int      @id @default(autoincrement())
  reaction_emoji String?  @default("")
  reacted_at     DateTime @default(now())
  channel        Channel  @relation(fields: [channel_id], references: [platform_id])
  message        Message  @relation(fields: [message_id], references: [platform_id])
  user           User     @relation(fields: [user_id], references: [platform_id])

  @@unique([user_id, message_id, reaction_emoji])
  @@index([channel_id], map: "message_reaction_channel_id_fkey")
  @@index([message_id], map: "message_reaction_message_id_fkey")
  @@map("message_reaction")
}

model UserChannel {
  user_platform_id    String
  channel_platform_id String

  user    User    @relation(fields: [user_platform_id], references: [platform_id])
  channel Channel @relation(fields: [channel_platform_id], references: [platform_id])

  @@id([user_platform_id, channel_platform_id])
}

model UserRole {
  user_platform_id String
  role_platform_id String

  user User @relation(fields: [user_platform_id], references: [platform_id])
  role Role @relation(fields: [role_platform_id], references: [platform_id])

  @@id([user_platform_id, role_platform_id])
}
