//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table user {
  id Int [pk, increment]
  username String [not null]
  global_name String
  joined_at DateTime
  update_at DateTime
  last_active DateTime
  create_at DateTime [default: `now()`]
  bot Boolean [not null]
  email String
  status Int [not null]
  platform_created_at DateTime
  platform_id String [unique, not null]
  audio_event audio_event [not null]
  message message [not null]
  message_reaction message_reaction [not null]
  channels UserChannel [not null]
  user_event user_event [not null]
  roles UserRole [not null]
}

Table role {
  id Int [pk, increment]
  name String [not null]
  created_at DateTime [default: `now()`, not null]
  platform_created_at DateTime [not null]
  platform_id String [unique, not null]
  users UserRole [not null]
}

Table audio_event {
  id Int [pk, increment]
  channel_id String [not null]
  creator_id String [not null]
  name String [not null]
  description String
  status_id String [not null]
  start_at DateTime [not null]
  end_at DateTime
  user_count Int [not null]
  image String
  created_at DateTime [default: `now()`, not null]
  platform_id String [unique, not null]
  channel channel [not null]
  creator user [not null]
  status event_status [not null]
  user_event user_event [not null]
}

Table event_status {
  id Int [pk, increment]
  name String [not null]
  created_at DateTime [default: `now()`, not null]
  platform_id String [unique, not null]
  event audio_event [not null]
}

Table user_event {
  id Int [pk, increment]
  event_id String [not null]
  user_id String [not null]
  event_type EventType [not null]
  created_at DateTime [default: `now()`, not null]
  event audio_event [not null]
  user user [not null]
}

Table message {
  id Int [pk, increment]
  channel_id String [not null]
  user_id String [not null]
  created_at DateTime [default: `now()`, not null]
  is_deleted Boolean [not null, default: false]
  platform_created_at DateTime [not null]
  platform_id String [unique, not null]
  channel channel [not null]
  user user [not null]
  message_reaction message_reaction [not null]
}

Table channel {
  id Int [pk, increment]
  name String [not null]
  url String [not null]
  created_at DateTime [default: `now()`, not null]
  platform_id String [unique, not null]
  audio_event audio_event [not null]
  message message [not null]
  message_reaction message_reaction [not null]
  users UserChannel [not null]
}

Table message_reaction {
  user_id String [not null]
  message_id String [not null]
  channel_id String [not null]
  id Int [pk, increment]
  reaction_emoji String [default: '']
  reacted_at DateTime [default: `now()`, not null]
  channel channel [not null]
  message message [not null]
  user user [not null]

  indexes {
    (user_id, message_id, reaction_emoji) [unique]
  }
}

Table UserChannel {
  user_platform_id String [not null]
  channel_platform_id String [not null]
  user user [not null]
  channel channel [not null]

  indexes {
    (user_platform_id, channel_platform_id) [pk]
  }
}

Table UserRole {
  user_platform_id String [not null]
  role_platform_id String [not null]
  user user [not null]
  role role [not null]

  indexes {
    (user_platform_id, role_platform_id) [pk]
  }
}

Enum EventType {
  JOINED
  LEFT
}

Ref: audio_event.channel_id > channel.platform_id

Ref: audio_event.creator_id > user.platform_id

Ref: audio_event.status_id > event_status.platform_id

Ref: user_event.event_id > audio_event.platform_id

Ref: user_event.user_id > user.platform_id

Ref: message.channel_id > channel.platform_id

Ref: message.user_id > user.platform_id

Ref: message_reaction.channel_id > channel.platform_id

Ref: message_reaction.message_id > message.platform_id

Ref: message_reaction.user_id > user.platform_id

Ref: UserChannel.user_platform_id > user.platform_id

Ref: UserChannel.channel_platform_id > channel.platform_id

Ref: UserRole.user_platform_id > user.platform_id

Ref: UserRole.role_platform_id > role.platform_id